--- a/Vastar/SideBar/MemberDataViewController.xib
+++ b/Vastar/SideBar/MemberDataViewController.xib
@@ -24,6 +24,7 @@
                 <outlet property="telLabel" destination="tYi-cU-mgW" id="seK-Hk-4sT"/>
                 <outlet property="telTextField" destination="AcH-Mz-QKB" id="75m-Zo-RKU"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
+                <outlet property="viewContainer" destination="SnJ-iQ-UiV" id="UUR-AU-gfL"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -44,10 +45,7 @@
                                     </constraints>
                                 </imageView>
                                 <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="A7U-xN-7IY">
-                                    <rect key="frame" x="50" y="96" width="130" height="34"/>
-                                    <constraints>
-                                        <constraint firstAttribute="width" constant="130" id="VuU-J3-mOt"/>
-                                    </constraints>
+                                    <rect key="frame" x="60" y="91" width="135" height="34"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                     <textInputTraits key="textInputTraits"/>
                                 </textField>
@@ -58,23 +56,23 @@
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="AcH-Mz-QKB">
-                                    <rect key="frame" x="50" y="276" width="145" height="34"/>
+                                    <rect key="frame" x="60" y="281" width="135" height="34"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                     <textInputTraits key="textInputTraits"/>
                                 </textField>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZUa-Ul-zl1">
-                                    <rect key="frame" x="50" y="150" width="42" height="21"/>
+                                    <rect key="frame" x="50" y="145" width="42" height="21"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Su1-Zz-qWa">
-                                    <rect key="frame" x="50" y="186" width="165" height="34"/>
+                                    <rect key="frame" x="60" y="186" width="180" height="34"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                     <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                                 </textField>
                                 <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HWW-3H-skr">
-                                    <rect key="frame" x="245" y="93" width="80" height="40"/>
+                                    <rect key="frame" x="245" y="88" width="80" height="40"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="40" id="FFA-sx-9cY"/>
                                         <constraint firstAttribute="width" constant="80" id="kZm-h7-jOp"/>
@@ -90,7 +88,7 @@
                                     <state key="normal" title="Button" backgroundImage="btn"/>
                                 </button>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZgP-67-CVH">
-                                    <rect key="frame" x="245" y="273" width="80" height="40"/>
+                                    <rect key="frame" x="245" y="278" width="80" height="40"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="40" id="3o6-iB-7v0"/>
                                         <constraint firstAttribute="width" constant="80" id="hDo-Lp-Fn9"/>
@@ -98,7 +96,7 @@
                                     <state key="normal" title="Button" backgroundImage="btn"/>
                                 </button>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fo9-OQ-lOa">
-                                    <rect key="frame" x="50" y="60" width="42" height="21"/>
+                                    <rect key="frame" x="50" y="50" width="42" height="21"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
@@ -128,30 +126,30 @@
                                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 </tableView>
                             </subviews>
-                            <color key="backgroundColor" red="0.0" green="0.23921568627450979" blue="0.14509803921568626" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <constraints>
                                 <constraint firstItem="MRR-iA-o3H" firstAttribute="top" secondItem="SnJ-iQ-UiV" secondAttribute="top" constant="15" id="3ZI-zM-iM0"/>
+                                <constraint firstItem="HWW-3H-skr" firstAttribute="leading" secondItem="A7U-xN-7IY" secondAttribute="trailing" constant="50" id="3d9-De-UoO"/>
                                 <constraint firstItem="ZUa-Ul-zl1" firstAttribute="leading" secondItem="fo9-OQ-lOa" secondAttribute="leading" id="4nP-4Y-CoF"/>
                                 <constraint firstItem="ZUa-Ul-zl1" firstAttribute="top" secondItem="A7U-xN-7IY" secondAttribute="bottom" constant="20" id="BWb-Xq-bW8"/>
                                 <constraint firstItem="nx1-ZD-jsU" firstAttribute="centerX" secondItem="MRR-iA-o3H" secondAttribute="centerX" id="BaV-6l-aE8"/>
                                 <constraint firstItem="36L-fI-p7R" firstAttribute="top" secondItem="nx1-ZD-jsU" secondAttribute="bottom" constant="30" id="Cfs-B2-auO"/>
-                                <constraint firstItem="AcH-Mz-QKB" firstAttribute="leading" secondItem="fo9-OQ-lOa" secondAttribute="leading" id="CoU-VI-kdN"/>
                                 <constraint firstAttribute="trailing" secondItem="Xcb-HB-LOj" secondAttribute="trailing" constant="5" id="EEC-kh-lk6"/>
+                                <constraint firstItem="Su1-Zz-qWa" firstAttribute="leading" secondItem="A7U-xN-7IY" secondAttribute="leading" id="EHu-co-M1w"/>
                                 <constraint firstItem="JPA-ol-WEp" firstAttribute="centerX" secondItem="MRR-iA-o3H" secondAttribute="centerX" id="Fim-fu-AD3"/>
                                 <constraint firstItem="tYi-cU-mgW" firstAttribute="leading" secondItem="fo9-OQ-lOa" secondAttribute="leading" id="GAq-oJ-Soj"/>
                                 <constraint firstItem="HWW-3H-skr" firstAttribute="centerY" secondItem="A7U-xN-7IY" secondAttribute="centerY" id="HQm-zb-crT"/>
                                 <constraint firstItem="36L-fI-p7R" firstAttribute="centerX" secondItem="MRR-iA-o3H" secondAttribute="centerX" id="IOJ-66-XXb"/>
                                 <constraint firstItem="MRR-iA-o3H" firstAttribute="leading" secondItem="SnJ-iQ-UiV" secondAttribute="leading" constant="15" id="M2K-oa-MGK"/>
                                 <constraint firstItem="Xcb-HB-LOj" firstAttribute="centerX" secondItem="MRR-iA-o3H" secondAttribute="centerX" id="M3Y-BT-JkR"/>
-                                <constraint firstItem="Su1-Zz-qWa" firstAttribute="leading" secondItem="fo9-OQ-lOa" secondAttribute="leading" id="MDT-qY-y9D"/>
                                 <constraint firstItem="JPA-ol-WEp" firstAttribute="leading" secondItem="SnJ-iQ-UiV" secondAttribute="leading" constant="100" id="MLP-yv-Gt0"/>
                                 <constraint firstAttribute="trailing" secondItem="HWW-3H-skr" secondAttribute="trailing" constant="50" id="NLa-dP-cv9"/>
                                 <constraint firstItem="JPA-ol-WEp" firstAttribute="top" secondItem="MRR-iA-o3H" secondAttribute="bottom" constant="20" id="Nqa-yr-Xyh"/>
                                 <constraint firstAttribute="trailing" secondItem="nx1-ZD-jsU" secondAttribute="trailing" constant="15" id="PBZ-Kv-012"/>
                                 <constraint firstItem="Xcb-HB-LOj" firstAttribute="top" secondItem="JPA-ol-WEp" secondAttribute="bottom" constant="5" id="REC-1H-laE"/>
                                 <constraint firstAttribute="trailing" secondItem="36L-fI-p7R" secondAttribute="trailing" constant="15" id="SDH-42-IiY"/>
-                                <constraint firstItem="Tw0-hK-MU8" firstAttribute="leading" secondItem="Su1-Zz-qWa" secondAttribute="trailing" constant="30" id="VNm-Vb-MaQ"/>
-                                <constraint firstItem="A7U-xN-7IY" firstAttribute="top" secondItem="fo9-OQ-lOa" secondAttribute="bottom" constant="15" id="XcP-DM-ejk"/>
+                                <constraint firstItem="Tw0-hK-MU8" firstAttribute="leading" secondItem="Su1-Zz-qWa" secondAttribute="trailing" constant="5" id="VNm-Vb-MaQ"/>
+                                <constraint firstItem="A7U-xN-7IY" firstAttribute="top" secondItem="fo9-OQ-lOa" secondAttribute="bottom" constant="20" id="XcP-DM-ejk"/>
                                 <constraint firstAttribute="bottom" secondItem="36L-fI-p7R" secondAttribute="bottom" constant="50" id="YaX-Xi-asb"/>
                                 <constraint firstItem="ZgP-67-CVH" firstAttribute="leading" secondItem="AcH-Mz-QKB" secondAttribute="trailing" constant="50" id="arp-dg-zUY"/>
                                 <constraint firstAttribute="trailing" secondItem="MRR-iA-o3H" secondAttribute="trailing" constant="15" id="bv1-I9-6I4"/>
@@ -160,17 +158,18 @@
                                 <constraint firstItem="fo9-OQ-lOa" firstAttribute="leading" secondItem="SnJ-iQ-UiV" secondAttribute="leading" constant="50" id="iVv-Dz-qxS"/>
                                 <constraint firstItem="nx1-ZD-jsU" firstAttribute="leading" secondItem="SnJ-iQ-UiV" secondAttribute="leading" constant="15" id="iYB-Jd-bcY"/>
                                 <constraint firstAttribute="trailing" secondItem="JPA-ol-WEp" secondAttribute="trailing" constant="100" id="jsV-wg-gDX"/>
-                                <constraint firstItem="Su1-Zz-qWa" firstAttribute="top" secondItem="ZUa-Ul-zl1" secondAttribute="bottom" constant="15" id="n5g-Zo-FsE"/>
+                                <constraint firstItem="A7U-xN-7IY" firstAttribute="leading" secondItem="SnJ-iQ-UiV" secondAttribute="leading" constant="60" id="lXq-k5-feD"/>
+                                <constraint firstItem="Su1-Zz-qWa" firstAttribute="top" secondItem="ZUa-Ul-zl1" secondAttribute="bottom" constant="20" id="n5g-Zo-FsE"/>
+                                <constraint firstItem="AcH-Mz-QKB" firstAttribute="leading" secondItem="A7U-xN-7IY" secondAttribute="leading" id="nZ0-4n-qGe"/>
                                 <constraint firstItem="36L-fI-p7R" firstAttribute="leading" secondItem="SnJ-iQ-UiV" secondAttribute="leading" constant="15" id="oVX-3Q-zRa"/>
                                 <constraint firstItem="Tw0-hK-MU8" firstAttribute="centerY" secondItem="Su1-Zz-qWa" secondAttribute="centerY" id="r3r-dW-teJ"/>
-                                <constraint firstItem="A7U-xN-7IY" firstAttribute="leading" secondItem="fo9-OQ-lOa" secondAttribute="leading" id="sNR-EY-h8y"/>
                                 <constraint firstItem="ZgP-67-CVH" firstAttribute="centerY" secondItem="AcH-Mz-QKB" secondAttribute="centerY" id="w5V-DV-JlK"/>
                                 <constraint firstItem="Xcb-HB-LOj" firstAttribute="leading" secondItem="SnJ-iQ-UiV" secondAttribute="leading" constant="5" id="w9t-hQ-waO"/>
-                                <constraint firstItem="fo9-OQ-lOa" firstAttribute="top" secondItem="SnJ-iQ-UiV" secondAttribute="top" constant="60" id="x8u-ej-P5U"/>
+                                <constraint firstItem="fo9-OQ-lOa" firstAttribute="top" secondItem="SnJ-iQ-UiV" secondAttribute="top" constant="50" id="x8u-ej-P5U"/>
                                 <constraint firstItem="nx1-ZD-jsU" firstAttribute="top" secondItem="Xcb-HB-LOj" secondAttribute="bottom" constant="20" id="xCA-cX-XMr"/>
                                 <constraint firstItem="ZgP-67-CVH" firstAttribute="trailing" secondItem="HWW-3H-skr" secondAttribute="trailing" id="yg8-eD-sv0"/>
                                 <constraint firstItem="Tw0-hK-MU8" firstAttribute="trailing" secondItem="HWW-3H-skr" secondAttribute="trailing" id="zHm-Ak-TaZ"/>
-                                <constraint firstItem="AcH-Mz-QKB" firstAttribute="top" secondItem="tYi-cU-mgW" secondAttribute="bottom" constant="15" id="zcO-rO-klS"/>
+                                <constraint firstItem="AcH-Mz-QKB" firstAttribute="top" secondItem="tYi-cU-mgW" secondAttribute="bottom" constant="20" id="zcO-rO-klS"/>
                             </constraints>
                         </view>
                     </subviews>
@@ -186,7 +185,7 @@
                 </scrollView>
             </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
-            <color key="backgroundColor" red="0.0" green="0.24109309910000001" blue="0.14230054619999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
                 <constraint firstItem="lST-oo-5j6" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="AeK-Yf-KUV"/>
                 <constraint firstItem="lST-oo-5j6" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="j9R-re-Z1z"/>
